// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render default slot 1`] = `<button class="zv-button zv-button--default zv-button--large zv-button--square zv-goods-action-button zv-goods-action-button--first zv-goods-action-button--last"><span class="zv-button__text">Default Content</span></button>`;

exports[`Icon render default slot 1`] = `
<div role="button" tabindex="0" class="zv-goods-action-icon">
  <div class="zv-icon zv-icon-undefined zv-goods-action-icon__icon">
    <!---->
  </div>Default Content
</div>
`;

exports[`Icon render icon slot 1`] = `
<div role="button" tabindex="0" class="zv-goods-action-icon">
  <div class="zv-goods-action-icon__icon">Custom Icon
    <!---->
  </div>Text
</div>
`;

exports[`Icon render icon slot with dot 1`] = `
<div role="button" tabindex="0" class="zv-goods-action-icon">
  <div class="zv-goods-action-icon__icon">Custom Icon<div class="zv-info zv-info--dot"></div>
  </div>Text
</div>
`;

exports[`Icon render icon slot with info 1`] = `
<div role="button" tabindex="0" class="zv-goods-action-icon">
  <div class="zv-goods-action-icon__icon">Custom Icon<div class="zv-info">1</div>
  </div>Text
</div>
`;

exports[`disable safe-area-inset-bottom prop 1`] = `<div class="zv-goods-action zv-goods-action--unfit"></div>`;
